{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 82,
  "lineage": "f1500bf9-f9ba-a2f2-8f05-3158bd06d256",
  "resources": [
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b722c9b1699f618",
            "association_id": "eipassoc-0c8f6232c4d7e487d",
            "domain": "vpc",
            "id": "eipalloc-09b722c9b1699f618",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-09a4b3ab2b43e70ec",
            "private_dns": "ip-10-0-1-102.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-13-209-148-44.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.148.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ex-nat-eip",
              "Resource": "nat-gateway"
            },
            "tags_all": {
              "Name": "ex-nat-eip",
              "Resource": "nat-gateway"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:internet-gateway/igw-045a70ba6d236348c",
            "id": "igw-045a70ba6d236348c",
            "owner_id": "182024812696",
            "tags": {
              "Name": "ex-poc-vpc-igw",
              "Resource": "igw"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-igw",
              "Resource": "igw"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b722c9b1699f618",
            "association_id": "eipassoc-0c8f6232c4d7e487d",
            "connectivity_type": "public",
            "id": "nat-009ec78af2abd032d",
            "network_interface_id": "eni-09a4b3ab2b43e70ec",
            "private_ip": "10.0.1.102",
            "public_ip": "13.209.148.44",
            "subnet_id": "subnet-03ff02580aa5098a6",
            "tags": {
              "Name": "ex-a-nat",
              "Resource": "nat"
            },
            "tags_all": {
              "Name": "ex-a-nat",
              "Resource": "nat"
            }
          },
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0f7dee3b816e5c452",
            "id": "rtb-0f7dee3b816e5c452",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ex-db-rt",
              "Resource": "route-table"
            },
            "tags_all": {
              "Name": "ex-db-rt",
              "Resource": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-07c9ad553595e2d47",
            "id": "rtb-07c9ad553595e2d47",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009ec78af2abd032d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ex-private-rt",
              "Resource": "route-table"
            },
            "tags_all": {
              "Name": "ex-private-rt",
              "Resource": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-04226101c67a414db",
            "id": "rtb-04226101c67a414db",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045a70ba6d236348c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ex-public-rt",
              "Resource": "route-table"
            },
            "tags_all": {
              "Name": "ex-public-rt",
              "Resource": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_internet_gateway.igw",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-rt-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0214848e46c31eca7",
            "route_table_id": "rtb-0f7dee3b816e5c452",
            "subnet_id": "subnet-041542b8d18c320de"
          },
          "dependencies": [
            "module.default-3-tier.aws_route_table.db_route_table",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03224e8df4508a03b",
            "route_table_id": "rtb-0f7dee3b816e5c452",
            "subnet_id": "subnet-0d1736e7583a96e89"
          },
          "dependencies": [
            "module.default-3-tier.aws_route_table.db_route_table",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d241b02b588b0bd9",
            "route_table_id": "rtb-07c9ad553595e2d47",
            "subnet_id": "subnet-037a9b32911496685"
          },
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_route_table.private_route_table",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fe6134bddd99d8e6",
            "route_table_id": "rtb-07c9ad553595e2d47",
            "subnet_id": "subnet-02e88c8ee24a78965"
          },
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_route_table.private_route_table",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f19c8a6b12b98d4",
            "route_table_id": "rtb-04226101c67a414db",
            "subnet_id": "subnet-03ff02580aa5098a6"
          },
          "dependencies": [
            "module.default-3-tier.aws_internet_gateway.igw",
            "module.default-3-tier.aws_route_table.public_route_table",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0414f326d8ab09be1",
            "route_table_id": "rtb-04226101c67a414db",
            "subnet_id": "subnet-0e3def862b3b75935"
          },
          "dependencies": [
            "module.default-3-tier.aws_internet_gateway.igw",
            "module.default-3-tier.aws_route_table.public_route_table",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-011f7b010a7cf1f6d",
            "description": "endpoint sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011f7b010a7cf1f6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "endpoint-private-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ex-private-sg"
            },
            "tags_all": {
              "Name": "ex-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-041542b8d18c320de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041542b8d18c320de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-poc-vpc-ap-northeast-2a-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-ap-northeast-2a-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-0d1736e7583a96e89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1736e7583a96e89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-poc-vpc-ap-northeast-2b-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-ap-northeast-2b-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-037a9b32911496685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037a9b32911496685",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-poc-vpc-ap-northeast-2a-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-ap-northeast-2a-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-02e88c8ee24a78965",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e88c8ee24a78965",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-poc-vpc-ap-northeast-2b-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-ap-northeast-2b-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-03ff02580aa5098a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff02580aa5098a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-poc-vpc-ap-northeast-2a-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-ap-northeast-2a-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-0e3def862b3b75935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3def862b3b75935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ex-poc-vpc-ap-northeast-2b-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "ex-poc-vpc-ap-northeast-2b-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "dependencies": [
            "module.default-3-tier.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.default-3-tier",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc/vpc-0a731ef7afb98c6cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06595f483af8d8a8d",
            "default_route_table_id": "rtb-0020e7450e866154f",
            "default_security_group_id": "sg-083193520fd74c531",
            "dhcp_options_id": "dopt-00db6602bf8d3ab9d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a731ef7afb98c6cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0020e7450e866154f",
            "owner_id": "182024812696",
            "tags": {
              "Name": "ex-poc-vpc",
              "Resource": "vpc"
            },
            "tags_all": {
              "Name": "ex-poc-vpc",
              "Resource": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0d3bb5db76d31371a",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc4a122c734971b1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc4a122c734971b1"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-0d3bb5db76d31371a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cc4a122c734971b1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "donggyu-cluster-20240601022118730900000004",
            "name_prefix": "donggyu-cluster-",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "donggyu-cluster"
            },
            "tags_all": {
              "Name": "donggyu-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0cc4a122c734971b1",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3bb5db76d31371a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0cc4a122c734971b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to Node group for Karpenter webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3bb5db76d31371a"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3bb5db76d31371a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3bb5db76d31371a"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "donggyu-node-20240601022118730900000003",
            "name_prefix": "donggyu-node-",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "donggyu-node",
              "karpenter.sh/discovery": "donggyu",
              "kubernetes.io/cluster/donggyu": "owned"
            },
            "tags_all": {
              "Name": "donggyu-node",
              "karpenter.sh/discovery": "donggyu",
              "kubernetes.io/cluster/donggyu": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a731ef7afb98c6cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1411748438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bb5db76d31371a",
            "security_group_rule_id": "sgr-00f88972d0ef24544",
            "self": false,
            "source_security_group_id": "sg-0cc4a122c734971b1",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-830717958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bb5db76d31371a",
            "security_group_rule_id": "sgr-06601b92b0c361572",
            "self": false,
            "source_security_group_id": "sg-0cc4a122c734971b1",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-736336300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d3bb5db76d31371a",
            "security_group_rule_id": "sgr-00f88972d0ef24544",
            "self": false,
            "source_security_group_id": "sg-0cc4a122c734971b1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2960309790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-030d31352042a9692",
            "self": false,
            "source_security_group_id": "sg-0d3bb5db76d31371a",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3642014539",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-00c017fee843a06af",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-113935957",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0e2e1913ae15d6033",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2018812760",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0404488b9a744b496",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-208882151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0311c5b63173c68a2",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2182400897",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0e5ee2b5dfef71759",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2509124270",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-050956357a2ea6d82",
            "self": false,
            "source_security_group_id": "sg-0d3bb5db76d31371a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1621012618",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-05febd09c9f1a946a",
            "self": false,
            "source_security_group_id": "sg-0d3bb5db76d31371a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_karpenter_port",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to Node group for Karpenter webhook",
            "from_port": 8443,
            "id": "sgrule-22575467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0bf8e784c5c153cd4",
            "self": false,
            "source_security_group_id": "sg-0d3bb5db76d31371a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2547862637",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0547ac97179b44cc5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-864219010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cc4a122c734971b1",
            "security_group_rule_id": "sgr-0d31995244245c8d7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.default-3-tier.aws_eip.nat_eip",
            "module.default-3-tier.aws_nat_gateway.nat",
            "module.default-3-tier.aws_subnet.db_subnets",
            "module.default-3-tier.aws_subnet.was_subnets",
            "module.default-3-tier.aws_subnet.webserver_subnets",
            "module.default-3-tier.aws_vpc.vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}